// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchBox render initial state with all props set 1`] = `
<Search
  addonBefore={<Connect(SearchScopeSelectContainer) />}
  enterButton={true}
  inputPrefixCls="ant-input"
  onChange={[Function]}
  onSearch={[Function]}
  placeholder="placeholder"
  prefixCls="ant-input-search"
  size="large"
  style={
    Object {
      "verticalAlign": "middle",
    }
  }
  value="value"
/>
`;

exports[`SearchBox renders new value on change 1`] = `
<Search
  addonBefore={<Connect(SearchScopeSelectContainer) />}
  enterButton={true}
  inputPrefixCls="ant-input"
  onChange={[Function]}
  onSearch={null}
  placeholder={null}
  prefixCls="ant-input-search"
  size="large"
  style={
    Object {
      "verticalAlign": "middle",
    }
  }
  value="new"
/>
`;
